--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  margin: auto;
+  /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif;*/
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /*position: sticky;*/
+  background-color: rgba(235,243,242,0.993);
+  /*border: 2px solid red;*/
+}
+
+body, html {
+  height: 90vh;
+  width: 100vw;
 }
 
 code {
